<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/textColorSetting"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textColorView"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:textSize="@dimen/_14sdp"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:background="@drawable/simple_circle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:textColor="@android:color/black"
                android:text="@string/textColorString"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fontSetting"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fontTextView"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/simple_circle"
                android:gravity="center"
                android:text="@string/defaultFont"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:textColor="@android:color/black"
                android:text="@string/fontString"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/speedSetting"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/speedTextView"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:text="@string/defaultSpeed"
                android:textSize="@dimen/_14sdp"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:background="@drawable/simple_circle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:textColor="@android:color/black"
                android:text="@string/speedString"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/backgroundSetting"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/backgroundView"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:textSize="@dimen/_14sdp"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:background="@drawable/simple_circle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:textColor="@android:color/black"
                android:text="@string/backgroundString"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/textToSpeechSetting"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textToSpeechTextView"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:text="@string/textToSpeechEnabled"
                android:textSize="@dimen/_14sdp"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:background="@drawable/simple_circle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:textColor="@android:color/black"
                android:text="@string/textToSpeechString"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/maxWordsSetting"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/maxWordsTextView"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:text="@string/defaultMaxWords"
                android:textSize="@dimen/_14sdp"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:background="@drawable/simple_circle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:textColor="@android:color/black"
                android:text="@string/maxWordsString"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>