<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_margin="@dimen/_15sdp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="@dimen/_14sdp"
        android:text="@string/confirmExitPrompt"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/noButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/noString"
            android:layout_marginRight="@dimen/_8sdp"
            android:textColor="@android:color/white"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:textSize="@dimen/_14sdp"
            android:textAllCaps="false"
            android:background="@drawable/rounded_button"/>

        <Button
            android:id="@+id/yesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/yesString"
            android:textColor="@android:color/white"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:textSize="@dimen/_14sdp"
            android:textAllCaps="false"
            android:background="@drawable/rounded_button"/>

    </LinearLayout>

</LinearLayout>