<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_4sdp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:gravity="start">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_gravity="center"
                android:textSize="@dimen/_14sdp"
                android:text="@string/editThisSubtitlePrompt"/>

        </LinearLayout>

        <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveString"
        android:textColor="@android:color/white"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:textSize="@dimen/_14sdp"
        android:textAllCaps="false"
        android:background="@drawable/rounded_button"/>

    </LinearLayout>

    <TextView
        android:id="@+id/errorMessage"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_light"
        android:textSize="@dimen/_12sdp"
        android:visibility="gone"
        android:text="@string/unableToSaveInvalidMessage"/>

    <EditText
        android:id="@+id/subtitleTextField"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:padding="@dimen/_8sdp"
        android:gravity="top"
        android:background="@drawable/widget_outline"
        android:textSize="@dimen/_12sdp" />

</LinearLayout>